Chore: remove deprecated method usage (#984)